# TsetlinMachine

./: CMakeLists.txt  LICENSE  README.md
source/: Main.cpp
source/tsetlin/: TsetlinMachine.cpp  TsetlinMachine.h
